Bestand voor Scrum standup, Sprint review & Retrospective.